samples/_failures_safe/1761002424_5eda81_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b03aae41.c: In function ‘main’:
./samples/SAFE/__tmp_b03aae41.c:130:12: error: missing terminating " character
  130 |     printf("Vector 1: (%.3f,
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b03aae41.c:130:5: error: expected expression at end of input
  130 |     printf("Vector 1: (%.3f,
      |     ^~~~~~
./samples/SAFE/__tmp_b03aae41.c:130:5: error: expected declaration or statement at end of input
